# openclaw

./: .env.example  .gitignore  OpenClaw.bat  README.md  TROUBLESHOOTING.md  pyproject.toml  requirements.txt  test_ws.py
.claude/: settings.json  settings.local.json
app/: main.py  profiles.py
app/agent/: __init__.py  cli_loop.py
app/approval/: manager.py
app/audit/: logger.py
app/feishu/: cards.py  client.py  events.py  ws.py
app/hooks/: router.py
app/models/: schemas.py
config/: settings.py  settings_deepseek.example.json  settings_glm.example.json  settings_kimi.example.json
flow/: ASYNC_FLOW.drawio  ASYNC_FLOW_MERMAID.md  architecture.html
pets/: pet.json  spritesheet_webp.txt
scripts/: diagnose_deepseek.py  start.bat  start.sh  test_api.py
scripts/hooks/: pre_tool_use.py
test/: test_moonshot.py
